--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,8 +27,6 @@
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true,
-//    "fullTemplateTypeCheck": true,
-//    "strictInputTypes": true
+    "strictTemplates": true
   }
 }
